--- a/Code/Domain/Domain/Domain.vcxproj
+++ b/Code/Domain/Domain/Domain.vcxproj
@@ -140,29 +140,31 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Controllable.cpp" />
+    <ClCompile Include="ControllerSystem.cpp" />
     <ClCompile Include="Controller_D.cpp" />
     <ClCompile Include="Controller_Input.cpp" />
+    <ClCompile Include="Controller_PID.cpp" />
     <ClCompile Include="Controller_PT.cpp" />
     <ClCompile Include="Outputable.cpp" />
     <ClCompile Include="Controller_I.cpp" />
     <ClCompile Include="Controller_P.cpp" />
     <ClCompile Include="Domain.cpp" />
-    <ClCompile Include="Timeable.cpp" />
     <ClCompile Include="Value.cpp" />
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Controllable.h" />
+    <ClInclude Include="ControllerSystem.h" />
     <ClInclude Include="Controller_D.h" />
     <ClInclude Include="Controller_I.h" />
     <ClInclude Include="Controller_Input.h" />
     <ClInclude Include="Controller_P.h" />
+    <ClInclude Include="Controller_PID.h" />
     <ClInclude Include="Controller_PT.h" />
     <ClInclude Include="Optional.h" />
     <ClInclude Include="Outputable.h" />
     <ClInclude Include="Ringbuffer.h" />
     <ClInclude Include="RingbufferItem.h" />
-    <ClInclude Include="Timeable.h" />
     <ClInclude Include="Unit.h" />
     <ClInclude Include="Value.h" />
     <ClInclude Include="Vector3D.h" />
