--- a/Code/Application/Application/Application.vcxproj.filters
+++ b/Code/Application/Application/Application.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="AccelToPos.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
