refrator Value to TimedValue
create Value and Time in Domain-Level; TimedValue inherance from both.

--- a/Code/Application/Application/Application.vcxproj
+++ b/Code/Application/Application/Application.vcxproj
@@ -147,9 +147,11 @@
   <ItemGroup>
     <ClCompile Include="AccelToPos.cpp" />
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="State.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AccelToPos.h" />
+    <ClInclude Include="State.h" />
     <ClInclude Include="Transmitable.h" />
     <ClInclude Include="Triggerable.h" />
   </ItemGroup>
