--- a/Code/Domain/Domain/Domain.vcxproj
+++ b/Code/Domain/Domain/Domain.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="Outputable.cpp" />
     <ClCompile Include="Controller_I.cpp" />
     <ClCompile Include="Controller_P.cpp" />
+    <ClCompile Include="TimedValue.cpp" />
     <ClCompile Include="Value.cpp" />
     <ClCompile Include="Vector3D.cpp" />
   </ItemGroup>
@@ -165,7 +166,9 @@
     <ClInclude Include="Outputable.h" />
     <ClInclude Include="Ringbuffer.h" />
     <ClInclude Include="RingbufferItem.h" />
+    <ClInclude Include="Timestamp.h" />
     <ClInclude Include="Unit.h" />
+    <ClInclude Include="TimedValue.h" />
     <ClInclude Include="Value.h" />
     <ClInclude Include="Vector3D.h" />
   </ItemGroup>
