--- a/Code/PosControl/PosControl.vcxproj.filters
+++ b/Code/PosControl/PosControl.vcxproj.filters
@@ -64,6 +64,9 @@
     <Filter Include="Application src">
       <UniqueIdentifier>{9dc90f74-1ceb-4bcc-a4c3-b49eb36383b9}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Adapter h">
+      <UniqueIdentifier>{1a982228-0f16-4dd9-8189-8b77e8102cdf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\PosControl\Controllable.h">
@@ -117,14 +120,20 @@
     <ClInclude Include="include\PosControl\State.h">
       <Filter>Application h</Filter>
     </ClInclude>
-    <ClInclude Include="include\PosControl\Transmitable.h">
-      <Filter>Application h</Filter>
-    </ClInclude>
-    <ClInclude Include="include\PosControl\Triggerable.h">
-      <Filter>Application h</Filter>
-    </ClInclude>
     <ClInclude Include="include\PosControl\Outputable.h">
       <Filter>Domain h</Filter>
+    </ClInclude>
+    <ClInclude Include="StateTranslator.h">
+      <Filter>Application h</Filter>
+    </ClInclude>
+    <ClInclude Include="StateCollector.h">
+      <Filter>Application h</Filter>
+    </ClInclude>
+    <ClInclude Include="include\PosControl\Transmitable.h">
+      <Filter>Adapter h</Filter>
+    </ClInclude>
+    <ClInclude Include="ActionAdapter.h">
+      <Filter>Adapter h</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
