--- a/Code/PosControl/PosControl.vcxproj
+++ b/Code/PosControl/PosControl.vcxproj
@@ -146,16 +146,20 @@
     <ClCompile Include="src\ActionAdapter.cpp" />
     <ClCompile Include="src\Controllable.cpp" />
     <ClCompile Include="src\ControllerSystem.cpp" />
+    <ClCompile Include="src\Controller_Basic.cpp" />
     <ClCompile Include="src\Controller_D.cpp" />
     <ClCompile Include="src\Controller_I.cpp" />
     <ClCompile Include="src\Controller_Input.cpp" />
     <ClCompile Include="src\Controller_P.cpp" />
     <ClCompile Include="src\Controller_PID.cpp" />
     <ClCompile Include="src\Controller_PT.cpp" />
+    <ClCompile Include="src\Input.cpp" />
+    <ClCompile Include="src\Inputable.cpp" />
     <ClCompile Include="src\Output.cpp" />
     <ClCompile Include="src\Outputable.cpp" />
     <ClCompile Include="src\State.cpp" />
     <ClCompile Include="src\StateHandler.cpp" />
+    <ClCompile Include="src\TimedDifference.cpp" />
     <ClCompile Include="src\TimedValue.cpp" />
     <ClCompile Include="src\Value.cpp" />
     <ClCompile Include="src\Vector3D.cpp" />
@@ -164,19 +168,24 @@
     <ClInclude Include="include\PosControl\AccelToPos.h" />
     <ClInclude Include="include\PosControl\ActionAdapter.h" />
     <ClInclude Include="include\PosControl\Controllable.h" />
+    <ClInclude Include="include\PosControl\ControlledOutput.h" />
     <ClInclude Include="include\PosControl\ControllerSystem.h" />
+    <ClInclude Include="include\PosControl\Controller_Basic.h" />
     <ClInclude Include="include\PosControl\Controller_D.h" />
     <ClInclude Include="include\PosControl\Controller_I.h" />
     <ClInclude Include="include\PosControl\Controller_Input.h" />
     <ClInclude Include="include\PosControl\Controller_P.h" />
     <ClInclude Include="include\PosControl\Controller_PID.h" />
     <ClInclude Include="include\PosControl\Controller_PT.h" />
+    <ClInclude Include="include\PosControl\Input.h" />
+    <ClInclude Include="include\PosControl\Inputable.h" />
     <ClInclude Include="include\PosControl\Optional.h" />
     <ClInclude Include="include\PosControl\Output.h" />
     <ClInclude Include="include\PosControl\Outputable.h" />
     <ClInclude Include="include\PosControl\Ringbuffer.h" />
     <ClInclude Include="include\PosControl\State.h" />
     <ClInclude Include="include\PosControl\StateHandler.h" />
+    <ClInclude Include="include\PosControl\TimedDifference.h" />
     <ClInclude Include="include\PosControl\TimedValue.h" />
     <ClInclude Include="include\PosControl\Timestamp.h" />
     <ClInclude Include="include\PosControl\Transmitable.h" />
