Update CMakeList.txt Files
Added Header.h Files to all Packages for more easy use in CMakeList-File
All Packages (but PosControl) now generate Libraries.

--- a/Code/Abstraction/CMakeLists.txt
+++ b/Code/Abstraction/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(calling)
+project(Abstraction)
 
 find_package(
 	catkin REQUIRED COMPONENTS
@@ -12,7 +12,7 @@ find_package(
 ## catkin specific configuration ##
 ###################################
 catkin_package(
-	LIBRARIES calling_lib
+	LIBRARIES Abstraction_lib
 	CATKIN_DEPENDS roscpp rospy std_msgs
 )
 
@@ -21,29 +21,29 @@ catkin_package(
 ###########
 include_directories(
 	include
-	include/calling
+	include/Abstraction
 	${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-add_library(calling_lib
-	include/calling/Calling.h
-	include/calling/Callable.h
-	include/calling/Caller.h
-	src/Caller.cpp
+add_library(Abstraction_lib
+	include/Abstraction/Header.h
+	src/TimedValue.cpp
+	src/Value.cpp
+	src/Vector3D.cpp
 )
 
-target_link_libraries(calling_lib ${catkin_LIBRARIES})
+target_link_libraries(Abstraction_lib ${catkin_LIBRARIES})
 
 #############
 ## Install ##
 #############
-install(TARGETS calling_lib 
+install(TARGETS Abstraction_lib 
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
 
-install(DIRECTORY include/calling/
+install(DIRECTORY include/Abstraction/
 	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
 
