--- a/Code/Domain/CMakeLists.txt
+++ b/Code/Domain/CMakeLists.txt
@@ -1,18 +1,20 @@
 cmake_minimum_required(VERSION 3.0.2)
-project(calling)
+project(Domain)
 
 find_package(
 	catkin REQUIRED COMPONENTS
 		roscpp
 		rospy
 		std_msgs
+		
+		Abstraction
 )
 
 ###################################
 ## catkin specific configuration ##
 ###################################
 catkin_package(
-	LIBRARIES calling_lib
+	LIBRARIES Domain_lib
 	CATKIN_DEPENDS roscpp rospy std_msgs
 )
 
@@ -21,29 +23,37 @@ catkin_package(
 ###########
 include_directories(
 	include
-	include/calling
+	../Abstraction/include
 	${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-add_library(calling_lib
-	include/calling/Calling.h
-	include/calling/Callable.h
-	include/calling/Caller.h
-	src/Caller.cpp
+add_library(Domain_lib
+	include/Domain/Header.h
+	src/Controllable.cpp
+	src/Controller_Basic.cpp
+	src/Controller_D.cpp
+	src/Controller_I.cpp
+	src/Controller_Input.cpp
+	src/Controller_P.cpp
+	src/Controller_PID.cpp
+	src/Controller_PT.cpp
+	src/ControllerSystem.cpp
+	src/Input.cpp
+	src/TimedDifference.cpp
 )
 
-target_link_libraries(calling_lib ${catkin_LIBRARIES})
+target_link_libraries(Domain_lib ${catkin_LIBRARIES})
 
 #############
 ## Install ##
 #############
-install(TARGETS calling_lib 
+install(TARGETS Domain_lib 
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
 
-install(DIRECTORY include/calling/
+install(DIRECTORY include/Domain/
 	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
 
