--- a/Code/coex/CMakeLists.txt
+++ b/Code/coex/CMakeLists.txt
@@ -5,8 +5,6 @@ project(coex)
 # add_compile_options(-std=c++11)
 
 ## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
 find_package(
   catkin REQUIRED
   COMPONENTS
@@ -18,63 +16,15 @@ find_package(
     mavros_msgs
     sensor_msgs
     
+    threading
     calling
+    Adapter
 )
 
-## System dependencies are found with CMake's conventions
-# find_package(Boost REQUIRED COMPONENTS system)
-
-
-## Uncomment this if the package has a setup.py. This macro ensures
-## modules and global scripts declared therein get installed
-## See http://ros.org/doc/api/catkin/html/user_guide/setup_dot_py.html
-# catkin_python_setup()
 
 ################################################
 ## Declare ROS messages, services and actions ##
 ################################################
-
-## To declare and build messages, services or actions from within this
-## package, follow these steps:
-## * Let MSG_DEP_SET be the set of packages whose message types you use in
-##   your messages/services/actions (e.g. std_msgs, actionlib_msgs, ...).
-## * In the file package.xml:
-##   * add a build_depend tag for "message_generation"
-##   * add a build_depend and a exec_depend tag for each package in MSG_DEP_SET
-##   * If MSG_DEP_SET isn't empty the following dependency has been pulled in
-##     but can be declared for certainty nonetheless:
-##     * add a exec_depend tag for "message_runtime"
-## * In this file (CMakeLists.txt):
-##   * add "message_generation" and every package in MSG_DEP_SET to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * add "message_runtime" and every package in MSG_DEP_SET to
-##     catkin_package(CATKIN_DEPENDS ...)
-##   * uncomment the add_*_files sections below as needed
-##     and list every .msg/.srv/.action file to be processed
-##   * uncomment the generate_messages entry below
-##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
-
-## Generate messages in the 'msg' folder
-# add_message_files(
-#   FILES
-#   Message1.msg
-#   Message2.msg
-# )
-
-## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
-
-## Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-#   Action1.action
-#   Action2.action
-# )
-
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
@@ -84,39 +34,14 @@ generate_messages(
     sensor_msgs
 )
 
-################################################
-## Declare ROS dynamic reconfigure parameters ##
-################################################
-
-## To declare and build dynamic reconfigure parameters within this
-## package, follow these steps:
-## * In the file package.xml:
-##   * add a build_depend and a exec_depend tag for "dynamic_reconfigure"
-## * In this file (CMakeLists.txt):
-##   * add "dynamic_reconfigure" to
-##     find_package(catkin REQUIRED COMPONENTS ...)
-##   * uncomment the "generate_dynamic_reconfigure_options" section below
-##     and list every .cfg file to be processed
-
-## Generate dynamic reconfigure parameters in the 'cfg' folder
-# generate_dynamic_reconfigure_options(
-#   cfg/DynReconf1.cfg
-#   cfg/DynReconf2.cfg
-# )
 
 ###################################
 ## catkin specific configuration ##
 ###################################
-## The catkin_package macro generates cmake config files for your package
-## Declare things to be passed to dependent projects
-## INCLUDE_DIRS: uncomment this if your package contains header files
-## LIBRARIES: libraries you create in this project that dependent projects also need
-## CATKIN_DEPENDS: catkin_packages dependent projects also need
-## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-  LIBRARIES coexController
-  CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs mavros_msgs sensor_msgs 
+	LIBRARIES coexController
+	CATKIN_DEPENDS roscpp rospy std_msgs geometry_msgs mavros_msgs sensor_msgs 
 #  DEPENDS system_lib
 )
 
@@ -125,172 +50,49 @@ catkin_package(
 ###########
 
 ## Specify additional locations of header files
-## Your package locations should be listed before other locations
 include_directories(
-  include
-  include/coex
-  ~/catkin_ws/src/calling/include
-  ~/catkin_ws/src/calling/include/calling
-  ~/catkin_ws/src/calling/src
-  ${catkin_INCLUDE_DIRS}
+	include
+	../calling/include
+	../threading/include
+	../Adapter/include
+	${catkin_INCLUDE_DIRS}
 )
 
 ## Declare a C++ library
-set(INCLUDE_calling
-	"../calling/include/calling/Calling.h"
-	"../calling/include/calling/Callable.h"
-	"../calling/include/calling/Caller.h"
-)
-
-
 add_library(coexController
-	include/coex/coexControl.h
+	../Adapter/include/Adapter/Transmitable.h
+	include/coex/Header.h
+	src/coexBattery.cpp
 	src/coexControl.cpp
-	
-	# extern calling
-	~/catkin_ws/src/calling/include/calling/Calling.h
-	~/catkin_ws/src/calling/include/calling/Callable.h
-	~/catkin_ws/src/calling/include/calling/Caller.h
-	~/catkin_ws/src/calling/src/Caller.cpp
-	
-	
-	
-	
-	
-	
-	include/coex/coexState.h
-	src/coexState.cpp
-	include/coex/coexBattery.h
-	src/coexBattery.cpp
-	include/coex/coexOrientation.h
-	src/coexOrientation.cpp
-	
-	#coex_C
-	include/coex/coexTransmitable.h
-  	src/coexTransmitable.cpp
-	include/coex/coexState.h
-	src/coexState.cpp
-	include/coex/coexBattery.h
-	src/coexBattery.cpp
-  	#coexRC
-	include/coex/JoystickAxis.h
-	src/JoystickAxis.cpp
-	include/coex/Joystick.h
-	src/Joystick.cpp
-	include/coex/coexRC_Receiver.h
-	src/coexRC_Receiver.cpp
-	include/coex/coexRC_Transmitter.h
-	src/coexRC_Transmitter.cpp
-	#coexMC (ManualControl
-	include/coex/coexMC.h
 	src/coexMC.cpp
-	${INCLUDE_calling}
+	src/coexOrientation.cpp
+	src/coexRC.cpp
+	src/coexRC_Receiver.cpp
+	src/coexRC_Transmitter.cpp
+	src/coexState.cpp
+  	src/coexTransmitable.cpp
+  	src/Joystick.cpp
+	src/JoystickAxis.cpp
 )
-
-## Add cmake target dependencies of the library
-## as an example, code may need to be generated before libraries
-## either from message generation or dynamic reconfigure
-# add_dependencies(${PROJECT_NAME} ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-
-## Declare a C++ executable
-## With catkin_make all packages are built within a single CMake context
-## The recommended prefix ensures that target names across packages don't collide
-#add_executable(KeyNode src/KeyNode.cpp)
-add_executable(AccelNode src/AccelReader.cpp)
-add_executable(ArmNode src/ArmNode.cpp)
-add_executable(BatteryNode src/BatteryNode.cpp)
-
-
-
-## Rename C++ executable without prefix
-## The above recommended prefix causes long target names, the following renames the
-## target back to the shorter version for ease of user use
-## e.g. "rosrun someones_pkg node" instead of "rosrun someones_pkg someones_pkg_node"
-# set_target_properties(${PROJECT_NAME}_node PROPERTIES OUTPUT_NAME node PREFIX "")
 
 ## Add cmake target dependencies of the executable
-## same as for the library above
-# add_dependencies(KeyNode ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
-#add_dependencies(KeyNode coex_generate_messages_cpp)
-add_dependencies(AccelNode coex_generate_messages_cpp)
-add_dependencies(ArmNode coex_generate_messages_cpp)
-add_dependencies(BatteryNode coex_generate_messages_cpp calling_lib)
-
-add_dependencies(coexController ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coex_generate_messages_cpp calling_lib)
-
+add_dependencies(coexController ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS} coex_generate_messages_cpp threading_lib calling_lib)
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
-
-#target_link_libraries(KeyNode ${catkin_LIBRARIES})
-target_link_libraries(AccelNode ${catkin_LIBRARIES})
-target_link_libraries(ArmNode ${catkin_LIBRARIES})
-target_link_libraries(BatteryNode ${catkin_LIBRARIES})
-
-
-target_link_libraries(coexController ${catkin_LIBRARIES} calling_lib)
+target_link_libraries(coexController ${catkin_LIBRARIES} threading_lib calling_lib)
 
 
 #############
 ## Install ##
 #############
-
-# all install targets should use catkin DESTINATION variables
-# See http://ros.org/doc/api/catkin/html/adv_user_guide/variables.html
-
-## Mark executable scripts (Python etc.) for installation
-## in contrast to setup.py, you can choose the destination
-# catkin_install_python(PROGRAMS
-#   scripts/my_python_script
-#   DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
-## Mark executables for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_executables.html
-# install(TARGETS ${PROJECT_NAME}_node
-#   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-# )
-
 ## Mark libraries for installation
-## See http://docs.ros.org/melodic/api/catkin/html/howto/format1/building_libraries.html
-# install(TARGETS ${PROJECT_NAME}
-#   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-#   RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION}
-# )
 install(TARGETS coexController 
 	ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 	RUNTIME DESTINATION ${CATKIN_GLOBAL_BIN_DESTINATION})
 
 ## Mark cpp header files for installation
-# install(DIRECTORY include/${PROJECT_NAME}/
-#   DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION}
-#   FILES_MATCHING PATTERN "*.h"
-#   PATTERN ".svn" EXCLUDE
-# )
-
 install(DIRECTORY include/coex/
 	DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
-## Mark other files for installation (e.g. launch and bag files, etc.)
-# install(FILES
-#   # myfile1
-#   # myfile2
-#   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
-# )
 
-#############
-## Testing ##
-#############
-
-## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_coex.cpp)
-# if(TARGET ${PROJECT_NAME}-test)
-#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
-# endif()
-
-## Add folders to be run by python nosetests
-# catkin_add_nosetests(test)
