--- a/Code/coex/package.xml
+++ b/Code/coex/package.xml
@@ -50,15 +50,16 @@
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   
-  <depend>geometry_msgs</depend>
-  <depend>mavros_msgs</depend>
-  <depend>roscpp</depend>
-  <depend>rospy</depend>
-  <depend>std_msgs</depend>
-  <depend>message_generation</depend>
-  <depend>sensor_msgs</depend>
-  
-  <depend>calling</depend>
+	<depend>geometry_msgs</depend>
+	<depend>mavros_msgs</depend>
+	<depend>roscpp</depend>
+	<depend>rospy</depend>
+	<depend>std_msgs</depend>
+	<depend>message_generation</depend>
+	<depend>sensor_msgs</depend>
+	
+	<depend>threading</depend>
+	<depend>calling</depend>
   
 
   
