--- a/Code/ROS_Mock/ROS_Mock.vcxproj
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj
@@ -146,6 +146,7 @@
     <ClCompile Include="termios.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="geometry_msgs\PoseStamped.h" />
     <ClInclude Include="geometry_msgs\Quaternion.h" />
     <ClInclude Include="geometry_msgs\Vector3.h" />
     <ClInclude Include="mavros_msgs\CommandBool.h" />
