--- a/Code/ROS_Mock/ROS_Mock.vcxproj.filters
+++ b/Code/ROS_Mock/ROS_Mock.vcxproj.filters
@@ -92,5 +92,8 @@
     <ClInclude Include="geometry_msgs\Vector3.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="geometry_msgs\PoseStamped.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
